--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <ul class="list-group">
               <li class="list-group-item">
                 <div class="fw-bold">BankBankan</div>
-                987654321 - Nita Ayas
+                236110737 - Nita Ayas
               </li>
               <li class="list-group-item">
                 <div class="fw-bold">Saweria</div>
@@ -458,7 +458,7 @@
           .then((response) => {
             if (response.ok) {
               console.log("Data terkirim!");
-              alert("Data berhasil dikirim.");
+              alert("Data berhasil dikirim, terimakasih ya.");
             } else {
               console.error("Error pada server!");
             }
