--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jehyun & Roje</title>
+    <title>Jehyun & pijaa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -89,10 +89,10 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
-                <img src="img/rose.jpeg" alt="Rose" class="img-responsive rounded-circle" />
+                <img src="img/rose.png" alt="Rose" class="img-responsive rounded-circle" />
               </div>
               <div class="col-8">
-                <h3>Rose</h3>
+                <h3>pijaa</h3>
                 <p>Seorang wanita yang anggun dan penuh cinta, siap menjalani kehidupan rumah tangga bersama pasangan tercinta</p>
                 <p>
                   Putra dari Bpk. Fulan <br />
@@ -367,7 +367,7 @@
 
     <script>
       simplyCountdown(".simply-countdown", {
-        year: 2025, // required
+        year: 2030, // required
         month: 1, // required
         day: 3, // required
         hours: 17, // Default is 0 [0-23] integer
