--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
       <main>
         <h4>Kepada <span>Bapak/Ibu/Saudara/i, </span></h4>
-        <h1>Jehyun & Rose</h1>
+        <h1>Jehyun & pijaa</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
         <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">Lihat Undangan</a>
